--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-webview": "^13.2.3",
     "react-redux": "^8.1.1",
     "redux": "^4.2.1",
